adding grafana